maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:8: error: too many arguments for method random3: ()Int
      if (random3(0,2)==0) {
                 ^